[project]
name = "try-adk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "google-adk>=0.1.0",
    "langchain-community>=0.3.21",
    "langchain-tavily>=0.1.5",
    "litellm>=1.66.1",
    "praw>=7.8.1",
    "pytz>=2025.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
